--- a/GameFactoryWPF/MainWindow.xaml
+++ b/GameFactoryWPF/MainWindow.xaml
@@ -32,11 +32,11 @@
         <materialDesign:Card Grid.Row="0">
             <Menu materialDesign:MenuAssist.TopLevelMenuItemHeight="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type materialDesign:Card}}, Path=ActualHeight}">
                 <MenuItem Header="Menu">
-                    <MenuItem Click="ToLeaderboard" Header="Leaderboard" />
+                    <MenuItem Click="ToLeaderboard" Header="_Leaderboard" />
                     <MenuItem Click="ToStats" Header="_Stats" />
+                    <MenuItem Click="ToHistory" Header="_History" />
                     <MenuItem Click="ToTTT" Header="_TTT" />
                     <MenuItem Click="ToMainScreen" Header="_MainMenu" />
-                    <MenuItem Click="ToHistory" Header="_History" />
                 </MenuItem>
             </Menu>
         </materialDesign:Card>
