all views working correctly

--- a/GameFactoryWPF/GameWindow.xaml
+++ b/GameFactoryWPF/GameWindow.xaml
@@ -5,8 +5,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:GameFactoryWPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Width="800"
-    Height="450"
     mc:Ignorable="d">
-    <Grid x:Name="MainGrid" />
+    <Grid x:Name="MainGrid">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="540px" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+    </Grid>
 </UserControl>
