--- a/GameFactoryWPF/StartGames.xaml
+++ b/GameFactoryWPF/StartGames.xaml
@@ -7,7 +7,7 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     BorderThickness="0"
-    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextElement.Foreground="{DynamicResource CommonBackgroundTemplate}"
     Visibility="Collapsed"
     mc:Ignorable="d">
     <Grid x:Name="StartGamePanel" Visibility="Visible">
