--- a/GameFactoryWPF/History.xaml
+++ b/GameFactoryWPF/History.xaml
@@ -35,7 +35,7 @@
                                 <TextBlock
                                     Margin="20,0,20,0"
                                     Foreground="Gray"
-                                    Text="{Binding p_MatchId}" />
+                                    Text="{Binding MatchId}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -43,17 +43,17 @@
                     <GridViewColumn Header="Result">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Margin="20,0,20,0" Text="{Binding p_Result}">
+                                <TextBlock Margin="20,0,20,0" Text="{Binding Result}">
                                     <TextBlock.Style>
                                         <Style TargetType="TextBlock">
                                             <Style.Triggers>
-                                                <DataTrigger Binding="{Binding p_Result}" Value="Win">
+                                                <DataTrigger Binding="{Binding Result}" Value="Win">
                                                     <Setter Property="Foreground" Value="Green" />
                                                 </DataTrigger>
-                                                <DataTrigger Binding="{Binding p_Result}" Value="Loss">
+                                                <DataTrigger Binding="{Binding Result}" Value="Loss">
                                                     <Setter Property="Foreground" Value="Red" />
                                                 </DataTrigger>
-                                                <DataTrigger Binding="{Binding p_Result}" Value="Draw">
+                                                <DataTrigger Binding="{Binding Result}" Value="Draw">
                                                     <Setter Property="Foreground" Value="Gray" />
                                                 </DataTrigger>
                                             </Style.Triggers>
@@ -67,7 +67,7 @@
                     <GridViewColumn Header="Opponent">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Margin="20,0,20,0" Text="{Binding p_Opponent}" />
+                                <TextBlock Margin="20,0,20,0" Text="{Binding Opponent}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -75,7 +75,7 @@
                     <GridViewColumn Header="GameType">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Margin="20,0,20,0" Text="{Binding p_GameType}" />
+                                <TextBlock Margin="20,0,20,0" Text="{Binding GameType}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
