--- a/GameFactoryWPF/MatchDetail.xaml
+++ b/GameFactoryWPF/MatchDetail.xaml
@@ -7,7 +7,6 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     BorderThickness="0"
-    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     Visibility="Collapsed"
     mc:Ignorable="d">
     <materialDesign:Card
@@ -15,7 +14,9 @@
         Width="200"
         Height="400"
         Margin="30"
-        HorizontalAlignment="Right">
+        HorizontalAlignment="Right"
+        Background="{DynamicResource SecondaryHueMidBrush}"
+        Foreground="Black">
 
         <Grid>
             <Grid.RowDefinitions>
@@ -37,13 +38,17 @@
                 Width="240"
                 Margin="10,0,10,0"
                 HorizontalAlignment="Center"
+                Foreground="Black"
                 ItemsSource="{Binding}">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Width="Auto" Header="Player">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Margin="20,0,0,0" Text="{Binding PlayerName}" />
+                                    <TextBlock
+                                        Margin="20,0,0,0"
+                                        Foreground="Black"
+                                        Text="{Binding PlayerName}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
@@ -51,7 +56,10 @@
                         <GridViewColumn Width="Auto" Header="Move">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Margin="20,0,0,0" Text="{Binding Input}" />
+                                    <TextBlock
+                                        Margin="20,0,0,0"
+                                        Foreground="Black"
+                                        Text="{Binding Input}" />
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
