--- a/GameFactoryWPF/GameWindow.xaml
+++ b/GameFactoryWPF/GameWindow.xaml
@@ -12,5 +12,42 @@
             <ColumnDefinition Width="540px" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+        <Grid
+            x:Name="StartGamePanel"
+            Grid.Column="1"
+            Visibility="Visible">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Button
+                Grid.Row="0"
+                Width="200px"
+                Margin="0,5"
+                HorizontalAlignment="Left"
+                Click="OnClickTTT"
+                Style="{StaticResource MaterialDesignFlatAccentBgButton}">
+                Start TTT
+            </Button>
+            <Button
+                Grid.Row="1"
+                Width="200px"
+                Margin="0,5"
+                HorizontalAlignment="Left"
+                Click="OnClick4w"
+                Style="{StaticResource MaterialDesignFlatAccentBgButton}">
+                Start 4W
+            </Button>
+            <Button
+                Grid.Row="2"
+                Width="200px"
+                Margin="0,5"
+                HorizontalAlignment="Left"
+                Click="OnClickTwist"
+                Style="{StaticResource MaterialDesignFlatAccentBgButton}">
+                Start Twist
+            </Button>
+        </Grid>
     </Grid>
 </UserControl>
