--- a/GameFactoryWPF/MainWindow.xaml
+++ b/GameFactoryWPF/MainWindow.xaml
@@ -31,12 +31,10 @@
 
         <materialDesign:Card Grid.Row="0">
             <Menu materialDesign:MenuAssist.TopLevelMenuItemHeight="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type materialDesign:Card}}, Path=ActualHeight}">
-                <MenuItem Header="Menu">
-                    <MenuItem Click="ToLeaderboard" Header="_Leaderboard" />
-                    <MenuItem Click="ToStats" Header="_Stats" />
-                    <MenuItem Click="ToHistory" Header="_History" />
-                    <MenuItem Click="ToMainScreen" Header="_MainMenu" />
-                </MenuItem>
+                <MenuItem Click="ToMain" Header="_Main" />
+                <MenuItem Click="ToLeaderboard" Header="_Show Leaderboard" />
+                <MenuItem Click="ToStats" Header="_Toggle Stats" />
+                <MenuItem Click="ToLogin" Header="_Back to Login" />
             </Menu>
         </materialDesign:Card>
 
