--- a/GameFactoryWPF/MainWindow.xaml
+++ b/GameFactoryWPF/MainWindow.xaml
@@ -40,7 +40,7 @@
                 <Menu Grid.Column="0" materialDesign:MenuAssist.TopLevelMenuItemHeight="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type materialDesign:Card}}, Path=ActualHeight}">
                     <MenuItem Click="ToMain" Header="_Main Menu" />
                     <MenuItem Click="ToLeaderboard" Header="_Show Leaderboard" />
-                    <MenuItem Click="ToStats" Header="_Toggle Stats" />
+                    <MenuItem Click="ToggleStats" Header="_Toggle Stats" />
                 </Menu>
 
                 <Menu
