--- a/GameFactoryWPF/Utilities/Resources.xaml
+++ b/GameFactoryWPF/Utilities/Resources.xaml
@@ -4,6 +4,29 @@
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Cyan.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
+    <Style x:Key="HiddenTabsStyle" TargetType="TabControl">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="TabControl">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TabPanel
+                            Grid.Row="0"
+                            Margin="0,0,4,-1"
+                            Panel.ZIndex="1"
+                            Background="Transparent"
+                            IsItemsHost="True" />
+                        <ContentPresenter Grid.Row="1" ContentSource="SelectedContent" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
     <ControlTemplate x:Key="CommonBackgroundTemplate" TargetType="Window">
         <Grid>
             <Grid Name="Background" Background="{DynamicResource MaterialDesignPaper}">
