--- a/GameFactoryWPF/CostumControls/GameCell.xaml
+++ b/GameFactoryWPF/CostumControls/GameCell.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:GameFactoryWPF"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Background="Transparent"
@@ -11,7 +12,7 @@
     mc:Ignorable="d">
     <Button
         x:Name="CellButton"
-        Content="{Binding CellContent}"
+        Content="{Binding CellContent, RelativeSource={RelativeSource AncestorType={x:Type local:GameCell}}}"
         IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
         Style="{StaticResource MaterialDesignFloatingActionSecondaryDarkButton}"
         ToolTip="MaterialDesignFloatingActionSecondaryDarkButton" />
