--- a/GameFactoryWPF/CostumControls/GameWindow.xaml
+++ b/GameFactoryWPF/CostumControls/GameWindow.xaml
@@ -6,16 +6,13 @@
     xmlns:local="clr-namespace:GameFactoryWPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Grid x:Name="MainGrid">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="540px" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Grid
-            x:Name="StartGamePanel"
-            Grid.Column="1"
-            Visibility="Collapsed">
+        <Grid x:Name="GameStartPanel" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
@@ -39,7 +36,6 @@
                 Style="{StaticResource MaterialDesignFlatAccentBgButton}">
                 Start 4W
             </Button>
-
         </Grid>
     </Grid>
 </UserControl>
