--- a/GameFactoryWPF/MainWindow.xaml
+++ b/GameFactoryWPF/MainWindow.xaml
@@ -30,6 +30,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
+        <!--  Top Menu  -->
         <materialDesign:Card Grid.Row="0">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -59,34 +60,27 @@
         <StackPanel x:Name="StatsPanel" Grid.Row="1" />
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="600" />
+                <RowDefinition Height="200" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+
             <StackPanel
-                x:Name="GamePanel"
-                Grid.Row="0"
-                Grid.Column="1" />
-            <StackPanel
-                x:Name="HistoryPanel"
+                x:Name="GameDetailPanel"
                 Grid.Row="0"
                 Grid.Column="2" />
             <StackPanel
-                x:Name="GamesPanel"
+                x:Name="GameStartPanel"
                 Grid.Row="1"
                 Grid.Column="2"
                 Width="200"
                 Margin="20,20"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom" />
-
         </Grid>
-
-
     </Grid>
-
 </Window>
