--- a/GameFactoryWPF/Utilities/Resources.xaml
+++ b/GameFactoryWPF/Utilities/Resources.xaml
@@ -11,7 +11,7 @@
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="0" />
-                            <RowDefinition Height="*" />
+                            <RowDefinition Height="500" />
                         </Grid.RowDefinitions>
                         <TabPanel
                             Grid.Row="0"
