--- a/GameFactoryWPF/CostumControls/GameWindow.xaml
+++ b/GameFactoryWPF/CostumControls/GameWindow.xaml
@@ -6,10 +6,10 @@
     xmlns:local="clr-namespace:GameFactoryWPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Grid>
+    <Grid x:Name="MainContent">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="540px" />
+            <ColumnDefinition Width="940px" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid x:Name="GameStartPanel" Grid.Column="1">
